Write input form for linked list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
 
+    <div class="container">
+        <div class="input">
+            <form action="">
+                <label for="list">Enter Comma Seperated List:</label>
+                <div>
+                    <input type="text" name="list" id="list" autofocus="true">
+                    <button type="submit">Create Linked List</button>
+                </div>
+            </form>
+        </div>
 
+        <div class="output">
+            <div class="string"></div><!-- visual representation of linked list -->
+        </div>
+    </div>
     
 </body>
 </html>
