--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Linked Lists</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="linkedList.js"></script>
+    <script type="module" src="main.js"></script>
 </head>
 <body>
 
