Add id to select button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <label for="list">Enter Comma Seperated List:</label>
                 <div>
                     <input type="text" name="list" id="list" autofocus="true">
-                    <button type="submit">Create Linked List</button>
+                    <button id="list-btn" type="submit">Create Linked List</button>
                 </div>
             </form>
         </div>
