Add placeholder to input text box

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <form action="">
                 <label for="list">Enter Comma Seperated List:</label>
                 <div>
-                    <input type="text" name="list" id="list" autofocus="true">
+                    <input type="text" name="list" id="list" autofocus="true" placeholder="jhon,kyle,bob">
                     <button id="list-btn" type="submit">Create Linked List</button>
                 </div>
             </form>
