--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
         <div class="output">
             <div class="string"></div><!-- visual representation of linked list -->
         </div>
+
+        <div class="interaction">
+            <form action="">
+                <select name="method" id="method">
+                    <option value="toString">toString()</option>
+                    <option value="append">append(value)</option>
+                    <option value="prepend">prepend(value)</option>
+                    <option value="at">at(index)</option>
+                    <option value="pop">pop()</option>
+                    <option value="contains">contains(value)</option>
+                    <option value="find">find(value)</option>
+                </select>
+            </form>
+        </div>
     </div>
     
 </body>
