Add input and button to interaction form

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <option value="contains">contains(value)</option>
                     <option value="find">find(value)</option>
                 </select>
+
+                <input placeholder="" type="text" name="user-input" id="user-input">
+
+                <button id="user-input-btn">Submit</button>
             </form>
         </div>
     </div>
