Change id of method input and button

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <option value="find">find(value)</option>
                 </select>
 
-                <input placeholder="" type="text" name="user-input" id="user-input">
+                <input placeholder="" type="text" name="method-user-input" id="method-user-input">
 
-                <button id="user-input-btn">Submit</button>
+                <button id="method-user-input-btn">Submit</button>
             </form>
         </div>
     </div>
