Add error message span for method-user-input

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     <option value="find">find(value)</option>
                 </select>
 
+                <span class="error-msg"></span>
+
                 <input placeholder="" type="text" name="method-user-input" id="method-user-input">
 
                 <button id="method-user-input-btn">Submit</button>
