Rename error span to info

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <option value="find">find(value)</option>
                 </select>
 
-                <span class="error-msg"></span>
+                <span class="info"></span>
 
                 <input placeholder="" type="text" name="method-user-input" id="method-user-input">
 
